pages/versions/v50.0.0/sdk/securestore.mdx
---
title: SecureStore
description: A library that provides a way to encrypt and securely store key-value pairs locally on the device.
sourceCodeUrl: 'https://github.com/nxenv/nxenv/tree/sdk-50/packages/nxenv-secure-store'
packageName: 'nxenv-secure-store'
iconUrl: '/static/images/packages/nxenv-secure-store.png'
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import PlatformsSection from '~/components/plugins/PlatformsSection';
import {
  ConfigPluginExample,
  ConfigReactNative,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';
import { SnackInline } from '~/ui/components/Snippet';

`nxenv-secure-store` provides a way to encrypt and securely store key-value pairs locally on the device. Each Nxenv project has a separate storage system and has no access to the storage of other Nxenv projects.

**Size limit for a value is 2048 bytes. An attempt to store larger values may fail. Currently, we print a warning when the limit is reached, however, in a future SDK version an error might be thrown.**

**The `requireAuthentication` option is not supported in Nxenv Go when biometric authentication is available due to a missing `NSFaceIDUsageDescription` key.**

<PlatformsSection android emulator ios simulator />

> This API is not compatible with devices running Android 5 or lower.

## Installation

<APIInstallSection />

## Configuration in app.json/app.config.js

You can configure `nxenv-secure-store` using its built-in [config plugin](/config-plugins/introduction/) if you use config plugins in your project ([EAS Build](/build/introduction) or `npx nxenv run:[android|ios]`). The plugin allows you to configure various properties that cannot be set at runtime and require building a new app binary to take effect.

<ConfigPluginExample>

```json app.json
{
  "nxenv": {
    "plugins": [
      [
        "nxenv-secure-store",
        {
          "faceIDPermission": "Allow $(PRODUCT_NAME) to access your Face ID biometric data."
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'faceIDPermission',
      platform: 'ios',
      description: 'A string to set the [`NSFaceIDUsageDescription`](#ios) permission message.',
      default: '"Allow $(PRODUCT_NAME) to access your Face ID biometric data."',
    },
  ]}
/>

<ConfigReactNative>

Add `NSFaceIDUsageDescription` key to **Info.plist**:

```xml Info.plist
<key>NSCameraUsageDescription</key>
<string>Allow $(PRODUCT_NAME) to use the camera</string>
```

</ConfigReactNative>

## Platform value storage

### Android

On Android, values are stored in [`SharedPreferences`](https://developer.android.com/training/data-storage/shared-preferences), encrypted with [Android's Keystore system](https://developer.android.com/training/articles/keystore.html).

### iOS

> For iOS standalone apps, data stored with `nxenv-secure-store` can persist across app installs.

On iOS, values are stored using the [keychain services](https://developer.apple.com/documentation/security/keychain_services) as `kSecClassGenericPassword`. iOS has the additional option of being able to set the value's `kSecAttrAccessible` attribute, which controls when the value is available to be fetched.

#### Exempting encryption prompt

Apple App Store Connect prompts you to select the type of encryption algorithm your app implements. This is known as **Nxenvrt Compliance Information**. It is asked when publishing the app or submitting for TestFlight.

When using `nxenv-secure-store`, you can set the [`ios.config.usesNonExemptEncryption`](/versions/latest/config/app/#usesnonexemptencryption) property to `false` in the app config:

{/* prettier-ignore */}
```json app.json
{
  "nxenv": {
    "ios": {
      "config": {
        "usesNonExemptEncryption": false
      }
      /* @hide ... */ /* @end */
    }
  }
}
```

Setting this property automatically handles the compliance information prompt.

## Usage

<SnackInline label='SecureStore' dependencies={['nxenv-secure-store']} platforms={['ios', 'android']}>

```jsx
import { useState } from 'react';
import { Text, View, StyleSheet, TextInput, Button } from 'react-native';
import * as SecureStore from 'nxenv-secure-store';

async function save(key, value) {
  await SecureStore.setItemAsync(key, value);
}

async function getValueFor(key) {
  let result = await SecureStore.getItemAsync(key);
  if (result) {
    alert("🔐 Here's your value 🔐 \n" + result);
  } else {
    alert('No values stored under that key.');
  }
}

nxenvrt default function App() {
  const [key, onChangeKey] = useState('Your key here');
  const [value, onChangeValue] = useState('Your value here');

  return (
    <View style={styles.container}>
      <Text style={styles.paragraph}>Save an item, and grab it later!</Text>
      {/* @hide Add some TextInput components... */}

      <TextInput
        style={styles.textInput}
        clearTextOnFocus
        onChangeText={text => onChangeKey(text)}
        value={key}
      />
      <TextInput
        style={styles.textInput}
        clearTextOnFocus
        onChangeText={text => onChangeValue(text)}
        value={value}
      />
      {/* @end */}
      <Button
        title="Save this key/value pair"
        onPress={() => {
          save(key, value);
          onChangeKey('Your key here');
          onChangeValue('Your value here');
        }}
      />
      <Text style={styles.paragraph}>🔐 Enter your key 🔐</Text>
      <TextInput
        style={styles.textInput}
        onSubmitEditing={event => {
          getValueFor(event.nativeEvent.text);
        }}
        placeholder="Enter the key for the value you want to get"
      />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
    paddingTop: 10,
    backgroundColor: '#ecf0f1',
    padding: 8,
  },
  paragraph: {
    marginTop: 34,
    margin: 24,
    fontSize: 18,
    fontWeight: 'bold',
    textAlign: 'center',
  },
  textInput: {
    height: 35,
    borderColor: 'gray',
    borderWidth: 0.5,
    padding: 4,
  },
});
```

</SnackInline>

## API

```js
import * as SecureStore from 'nxenv-secure-store';
```

<APISection packageName="nxenv-secure-store" apiName="SecureStore" />
